website/versioned_docs/version-2.0.x/reference/targets/python_distribution.mdx
---
title: python_distribution
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A publishable Python setuptools distribution (e.g. an sdist or wheel).

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

## `tags`

<Field type_repr={`field.type_hint`}>
  Arbitrary strings that you can use to describe a target. For example, you may
  tag some test targets with &#x27;integration_test&#x27; so that you could run
  `./pants --tags='integration_test' test ::` to only run on targets with that
  tag.
</Field>

## `description`

<Field type_repr={`field.type_hint`}>
  A human-readable description of the target. Use `./pants list --documented ::`
  to see all targets with descriptions.
</Field>

## `dependencies`

<Field type_repr={`field.type_hint`}>
  Addresses to other targets that this target depends on, e.g.
  [&#x27;helloworld/subdir:lib&#x27;]. Alternatively, you may include file
  names. Pants will find which target owns that file, and create a new target
  from that which only includes the file in its `sources` field. For files
  relative to the current BUILD file, prefix with `./`; otherwise, put the full
  path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;]. You
  may exclude dependencies by prefixing with `!`, e.g.
  `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false
  positives with dependency inference; otherwise, simply leave off the
  dependency from the BUILD file.
</Field>

## `provides`

<Field type_repr={`field.type_hint`}>
  The setup.py kwargs for the external artifact built from this target. See
  https://www.pantsbuild.org/docs/python-setup-py-goal.
</Field>

## `setup_py_commands`

<Field type_repr={`field.type_hint`}>
  The runtime commands to invoke setup.py with to create the distribution. E.g.,
  [&quot;bdist_wheel&quot;, &quot;--python-tag=py36.py37&quot;,
  &quot;sdist&quot;] If empty or unspecified, will just create a chroot with a
  setup() function. See https://www.pantsbuild.org/docs/python-setup-py-goal.
</Field>

</span>
